--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,49 @@
-.App {
-  text-align: center;
+body {
+  background-color: #f1f1f1;
 }
 
-.container {
-  background-color: #eeeeeb;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
+div {
+  color: "black";
+  text-align: "center";
+  justify-content: "center";
 }
 
-.input_inline {
-  display: inline;
-}
-.input_blk text {
-  font-size: 12px;
-  font-weight: 600;
-  padding-left: 10px;
-}
 .input_name,
 .input_goal {
   padding: 8px 10px;
-  border-radius: 8px;
-  border: 1px solid rgb(204, 204, 204);
-  margin: 0 8px 0 8px;
-  width: 300px;
+  border-radius: 6px;
+  border: none;
+  background-color: #f4f8ff;
+  outline: 1px solid #192e6715;
+  margin: 0 3px 3px 3px;
+  width: 112px;
 }
 .input_name:focus,
 .input_goal:focus {
-  outline: 1px solid #0c0adb;
-  box-shadow: 0px 0px 2px 2px #a6a1e750;
+  outline: 1px solid #192e67;
+  box-shadow: 0px 0px 2px 2px #a6a1e765;
 }
-.input_name {
-  width: 114px;
+.input_goal {
+  width: 250px;
 }
+
+/* color picker */
 .circle-picker {
-  display: block;
-  margin: 0 8px;
-  background-color: white;
-  height: max-content;
-  padding: 14px 40px 0px 58px;
   border-radius: 8px;
-  border: 1px solid rgb(204, 204, 204);
-  text-align: center;
+  background-color: #f4f8ff;
+  outline: 1px solid #192e6715;
+  padding-left: 14px;
+  padding-top: 14px;
+}
+.color-picker {
+  display: flex;
+  justify-content: center;
+  margin-left: -14px;
+  margin-top: 4px;
+  z-index: 1;
 }
 
 .submit {
-  margin: 20px 0 0 0;
   background-color: #192e67;
   color: white;
   font-weight: bold;
@@ -60,4 +54,9 @@
 .submit:hover {
   outline: 1px solid rgb(204, 204, 204);
   box-shadow: 0px 0px 2px 2px #7175b330;
+}
+
+svg {
+  width: 84%;
+  height: 100%;
 }
